fix: problems with accesibility(color contrasts in rark mode)

--- a/src/components/Aboutme/SkillsAboutMe.scss
+++ b/src/components/Aboutme/SkillsAboutMe.scss
@@ -87,7 +87,7 @@
 	}
 }
 #dark .skills-box {
-	color: black;
+	color: $white;
 	background-color: $primary-color;
 	border: 1px solid $white;
 	box-shadow: 0px 0px 20px -10px $primary-color;
