--- a/src/components/Contact/ContactInfo.scss
+++ b/src/components/Contact/ContactInfo.scss
@@ -109,6 +109,7 @@
 	}
 }
 #dark .contact-info {
+	color: $white;
 	background-color: $primary-color;
 	border: 1px solid $white;
 	box-shadow: 0px 0px 20px -10px $primary-color;
@@ -117,13 +118,13 @@
 		color: $white;
 	}
 	&__linkedin-ico {
-		background-image: url(../../icons/icons-linkedin-white.svg);
+		background-image: url(../../icons/icons-linkedin-black.svg);
 	}
 	&__tel-ico {
-		background-image: url(../../icons/icons-tel-white.png);
+		background-image: url(../../icons/icons-tel-black.png);
 	}
 	&__mail-ico {
-		background-image: url(../../icons/icons-mail-white.png);
+		background-image: url(../../icons/icons-mail-black.png);
 	}
 
 	&__edit-btn {
