--- a/src/components/Project/Project_card.scss
+++ b/src/components/Project/Project_card.scss
@@ -159,6 +159,9 @@
 		background-color: $primary-color;
 		border: 1px solid $third-color;
 	}
+	&__description {
+		color: $black;
+	}
 }
 #dark .project-card {
 	background-color: $primary-color;
@@ -185,6 +188,9 @@
 		background-color: $white;
 		font-weight: bold;
 		border: 2px solid $third-color;
+	}
+	&__description {
+		color: $white;
 	}
 }
 #light .accordion {
